--- a/templates/login.html
+++ b/templates/login.html
@@ -24,5 +24,7 @@
         {{ form.totp_code(size=6) }}<br>
         {{ form.submit() }}
     </form>
+    <!-- Link to User Dashboard -->
+    <a href="{{ url_for('dashboard') }}">Go to Dashboard</a>
 </body>
 </html>
