--- a/templates/register.html
+++ b/templates/register.html
@@ -24,5 +24,7 @@
         {{ form.confirm_password(type="password") }}<br>
         {{ form.submit() }}
     </form>
+    <!-- Link to User Dashboard -->
+    <a href="{{ url_for('dashboard') }}">Go to Dashboard</a>
 </body>
 </html>
