Update and rename developer.html to templates/developer.html

--- a/templates/developer.html
+++ b/templates/developer.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Developer Instructions - data-multivector</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Developer Instructions - data-multivector Project</h1>
