--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Data-MultiVector - Documentation</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Data-MultiVector Documentation</h1>
