--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Login - Your App</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Login</h1>
