--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Register - Your App</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Register</h1>
